# render_char_to_28x28

./: CMakeLists.txt  Makefile  README.md  forwardModel.json  main.cpp  markov_chain.h  png162dcm.cpp  pngEnhance.cpp  renderText
